[package]
name = "cityscape"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.28.0", features = ["rmcp"] }
rmcp = { version = "0.12.0", features = ["client", "transport-streamable-http-client-reqwest", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31.0"
opentelemetry-gcloud-trace = "0.22" 
tracing-opentelemetry = "0.32"
